--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "qs": "^6.14.0"
   },
   "devDependencies": {
-    "serverless": "^3.40.0",
-    "serverless-offline": "^14.4.0"
+    "serverless": "^3.40.0"
   }
 }
