Fixing auth layer

--- a/serverless.yml
+++ b/serverless.yml
@@ -12,6 +12,14 @@ provider:
     FIREFLY_SERVICES_CLIENT_SECRET: ${env:FIREFLY_SERVICES_CLIENT_SECRET}
     FIREFLY_SERVICES_SCOPES: ${env:FIREFLY_SERVICES_SCOPES}
     API_AUTH_TOKEN: ${env:API_AUTH_TOKEN}
+  
+  httpApi:
+    authorizers:
+      tokenAuth:
+        type: request
+        functionName: apiAuth
+        identitySource:
+          - $request.header.Authorization
 
 functions:
   getBarrierToken:
@@ -21,9 +29,8 @@ functions:
       - httpApi:
           path: /adobe/auth
           method: get
-          authorizer:
-            name: apiAuth
-            type: request   # request-based Lambda authorizer
+          authorizer: tokenAuth # <-- MUST match provider.httpApi.authorizers key
+          
   apiAuth:
     handler: auth.handler
     timeout: 5          
